--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  
   google_nav_bar: ^5.0.6
-
   provider: ^6.1.1
   http: ^1.1.2
+  decimal: ^2.3.3
 
 dev_dependencies:
   flutter_test:
